# Proyecto-DigiPEt

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  RESUME.md  build.py  built.bat  dependencis.bat  dependencis.py  dev.bat  digipet.py  docker-compose.yml  index.html  package-lock.json  package.json  run.bat  run.py  skills-lock.json  tsconfig.json  vite.config.ts
scripts/: clean.mjs  orphans.mjs
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: add_protected_item.toml  export_security_events.toml  get_current_user.toml  get_hostname.toml  get_local_ip.toml  get_mac_addresses.toml  get_network_info.toml  get_os_info.toml  get_system_info.toml  hydrate_state.toml  lock_session.toml  register_camera_event.toml  remove_protected_items.toml  rescan_integrity.toml  rotate_pin.toml  run_terminal_command.toml  set_items_locked.toml  setup_master_pin.toml  terminal_status.toml  trigger_emergency_lock.toml  unlock_session.toml  update_security_settings.toml
src-tauri/src/: app_state.rs  commands.rs  error.rs  integrity.rs  main.rs  models.rs  security.rs  storage.rs  system_info.rs
src/app/: App.tsx  router.tsx
src/hooks/: useAppBootstrap.ts  useInactivityLock.ts  useSystemInfo.ts
src/i18n/: catalog.ts  index.ts
src/layouts/: AppShell.tsx
src/lib/: format.ts
src/pages/: CameraPage.tsx  DashboardPage.tsx  IncidentsPage.tsx  NotFoundPage.tsx  ProtectedItemsPage.tsx  SessionsPage.tsx  SettingsPage.tsx  TerminalPage.tsx  (+1 more)
(+31 files in other folders)
