[package]
name = "digipet"
version = "0.1.0"
description = "DigiPET desktop secure monitoring suite"
authors = ["OpenAI"]
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
directories = "5"
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["alloc"] }
